--- a/reports/slides_apr.html
+++ b/reports/slides_apr.html
@@ -27,6 +27,7 @@ class: center, middle, inverse, title-slide
 
 
 
+
 ---
 class: center, middle
 
@@ -86,14 +87,28 @@ class: center
 # Variáveis Explicativas Brasil
 
 
-```r
-# Tabela
-knitr::read_chunk('summary_tbl.R')
-```
 
 ---
 # Datação de Recessões
 
+.pull-left[
+## Harding &amp; Pagan
+- Dissecting the cycle: a methodological investigation (2002)
+
+
+
+]
+
+.pull-right[
+## CODACE
+- Relatórios de frequência trimestral.
+
+
+- Segue a metodologia do National Bureau of Economic Research (NBER)
+
+
+- Datação definida por assembléia baseada em metodologia plural
+]
 
 
 
