--- a/reports/slides_apr.html
+++ b/reports/slides_apr.html
@@ -86,12 +86,20 @@ class: center
 
 # Variáveis Explicativas Brasil
 
-<div id="tprnhmqasl" style="overflow-x:auto;overflow-y:auto;width:auto;height:auto;">
+
+```
+## Note: Using an external vector in selections is ambiguous.
+## i Use `all_of(x)` instead of `x` to silence this message.
+## i See &lt;https://tidyselect.r-lib.org/reference/faq-external-vector.html&gt;.
+## This message is displayed once per session.
+```
+
+<div id="itczgmenrf" style="overflow-x:auto;overflow-y:auto;width:auto;height:auto;">
 <style>html {
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Helvetica Neue', 'Fira Sans', 'Droid Sans', Arial, sans-serif;
 }
 
-#tprnhmqasl .gt_table {
+#itczgmenrf .gt_table {
   display: table;
   border-collapse: collapse;
   margin-left: auto;
@@ -116,7 +124,7 @@ class: center
   border-left-color: #D3D3D3;
 }
 
-#tprnhmqasl .gt_heading {
+#itczgmenrf .gt_heading {
   background-color: #FFFFFF;
   text-align: center;
   border-bottom-color: #FFFFFF;
@@ -128,7 +136,7 @@ class: center
   border-right-color: #D3D3D3;
 }
 
-#tprnhmqasl .gt_title {
+#itczgmenrf .gt_title {
   color: #333333;
   font-size: 125%;
   font-weight: initial;
@@ -138,7 +146,7 @@ class: center
   border-bottom-width: 0;
 }
 
-#tprnhmqasl .gt_subtitle {
+#itczgmenrf .gt_subtitle {
   color: #333333;
   font-size: 85%;
   font-weight: initial;
@@ -148,13 +156,13 @@ class: center
   border-top-width: 0;
 }
 
-#tprnhmqasl .gt_bottom_border {
+#itczgmenrf .gt_bottom_border {
   border-bottom-style: solid;
   border-bottom-width: 2px;
   border-bottom-color: #D3D3D3;
 }
 
-#tprnhmqasl .gt_col_headings {
+#itczgmenrf .gt_col_headings {
   border-top-style: solid;
   border-top-width: 2px;
   border-top-color: #D3D3D3;
@@ -169,7 +177,7 @@ class: center
   border-right-color: #D3D3D3;
 }
 
-#tprnhmqasl .gt_col_heading {
+#itczgmenrf .gt_col_heading {
   color: #333333;
   background-color: #FFFFFF;
   font-size: 100%;
@@ -189,7 +197,7 @@ class: center
   overflow-x: hidden;
 }
 
-#tprnhmqasl .gt_column_spanner_outer {
+#itczgmenrf .gt_column_spanner_outer {
   color: #333333;
   background-color: #FFFFFF;
   font-size: 100%;
@@ -201,15 +209,15 @@ class: center
   padding-right: 4px;
 }
 
-#tprnhmqasl .gt_column_spanner_outer:first-child {
+#itczgmenrf .gt_column_spanner_outer:first-child {
   padding-left: 0;
 }
 
-#tprnhmqasl .gt_column_spanner_outer:last-child {
+#itczgmenrf .gt_column_spanner_outer:last-child {
   padding-right: 0;
 }
 
-#tprnhmqasl .gt_column_spanner {
+#itczgmenrf .gt_column_spanner {
   border-bottom-style: solid;
   border-bottom-width: 2px;
   border-bottom-color: #D3D3D3;
@@ -221,7 +229,7 @@ class: center
   width: 100%;
 }
 
-#tprnhmqasl .gt_group_heading {
+#itczgmenrf .gt_group_heading {
   padding: 8px;
   color: #333333;
   background-color: #FFFFFF;
@@ -243,7 +251,7 @@ class: center
   vertical-align: middle;
 }
 
-#tprnhmqasl .gt_empty_group_heading {
+#itczgmenrf .gt_empty_group_heading {
   padding: 0.5px;
   color: #333333;
   background-color: #FFFFFF;
@@ -258,15 +266,15 @@ class: center
   vertical-align: middle;
 }
 
-#tprnhmqasl .gt_from_md > :first-child {
+#itczgmenrf .gt_from_md > :first-child {
   margin-top: 0;
 }
 
-#tprnhmqasl .gt_from_md > :last-child {
+#itczgmenrf .gt_from_md > :last-child {
   margin-bottom: 0;
 }
 
-#tprnhmqasl .gt_row {
+#itczgmenrf .gt_row {
   padding-top: 8px;
   padding-bottom: 8px;
   padding-left: 5px;
@@ -285,7 +293,7 @@ class: center
   overflow-x: hidden;
 }
 
-#tprnhmqasl .gt_stub {
+#itczgmenrf .gt_stub {
   color: #333333;
   background-color: #FFFFFF;
   font-size: 100%;
@@ -297,7 +305,7 @@ class: center
   padding-left: 12px;
 }
 
-#tprnhmqasl .gt_summary_row {
+#itczgmenrf .gt_summary_row {
   color: #333333;
   background-color: #FFFFFF;
   text-transform: inherit;
@@ -307,7 +315,7 @@ class: center
   padding-right: 5px;
 }
 
-#tprnhmqasl .gt_first_summary_row {
+#itczgmenrf .gt_first_summary_row {
   padding-top: 8px;
   padding-bottom: 8px;
   padding-left: 5px;
@@ -317,7 +325,7 @@ class: center
   border-top-color: #D3D3D3;
 }
 
-#tprnhmqasl .gt_grand_summary_row {
+#itczgmenrf .gt_grand_summary_row {
   color: #333333;
   background-color: #FFFFFF;
   text-transform: inherit;
@@ -327,7 +335,7 @@ class: center
   padding-right: 5px;
 }
 
-#tprnhmqasl .gt_first_grand_summary_row {
+#itczgmenrf .gt_first_grand_summary_row {
   padding-top: 8px;
   padding-bottom: 8px;
   padding-left: 5px;
@@ -337,11 +345,11 @@ class: center
   border-top-color: #D3D3D3;
 }
 
-#tprnhmqasl .gt_striped {
+#itczgmenrf .gt_striped {
   background-color: rgba(128, 128, 128, 0.05);
 }
 
-#tprnhmqasl .gt_table_body {
+#itczgmenrf .gt_table_body {
   border-top-style: solid;
   border-top-width: 2px;
   border-top-color: #D3D3D3;
@@ -350,7 +358,7 @@ class: center
   border-bottom-color: #D3D3D3;
 }
 
-#tprnhmqasl .gt_footnotes {
+#itczgmenrf .gt_footnotes {
   color: #333333;
   background-color: #FFFFFF;
   border-bottom-style: none;
@@ -364,13 +372,13 @@ class: center
   border-right-color: #D3D3D3;
 }
 
-#tprnhmqasl .gt_footnote {
+#itczgmenrf .gt_footnote {
   margin: 0px;
   font-size: 90%;
   padding: 4px;
 }
 
-#tprnhmqasl .gt_sourcenotes {
+#itczgmenrf .gt_sourcenotes {
   color: #333333;
   background-color: #FFFFFF;
   border-bottom-style: none;
@@ -384,41 +392,41 @@ class: center
   border-right-color: #D3D3D3;
 }
 
-#tprnhmqasl .gt_sourcenote {
+#itczgmenrf .gt_sourcenote {
   font-size: 90%;
   padding: 4px;
 }
 
-#tprnhmqasl .gt_left {
+#itczgmenrf .gt_left {
   text-align: left;
 }
 
-#tprnhmqasl .gt_center {
+#itczgmenrf .gt_center {
   text-align: center;
 }
 
-#tprnhmqasl .gt_right {
+#itczgmenrf .gt_right {
   text-align: right;
   font-variant-numeric: tabular-nums;
 }
 
-#tprnhmqasl .gt_font_normal {
+#itczgmenrf .gt_font_normal {
   font-weight: normal;
 }
 
-#tprnhmqasl .gt_font_bold {
+#itczgmenrf .gt_font_bold {
   font-weight: bold;
 }
 
-#tprnhmqasl .gt_font_italic {
+#itczgmenrf .gt_font_italic {
   font-style: italic;
 }
 
-#tprnhmqasl .gt_super {
+#itczgmenrf .gt_super {
   font-size: 65%;
 }
 
-#tprnhmqasl .gt_footnote_marks {
+#itczgmenrf .gt_footnote_marks {
   font-style: italic;
   font-weight: normal;
   font-size: 65%;
@@ -512,12 +520,12 @@ class: center
 ## 5 2019Q4  2020Q2        2
 ```
 
-<div id="llcmthohci" style="overflow-x:auto;overflow-y:auto;width:auto;height:auto;">
+<div id="mswpaqdaer" style="overflow-x:auto;overflow-y:auto;width:auto;height:auto;">
 <style>html {
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Helvetica Neue', 'Fira Sans', 'Droid Sans', Arial, sans-serif;
 }
 
-#llcmthohci .gt_table {
+#mswpaqdaer .gt_table {
   display: table;
   border-collapse: collapse;
   margin-left: auto;
@@ -542,7 +550,7 @@ class: center
   border-left-color: #D3D3D3;
 }
 
-#llcmthohci .gt_heading {
+#mswpaqdaer .gt_heading {
   background-color: #FFFFFF;
   text-align: center;
   border-bottom-color: #FFFFFF;
@@ -554,7 +562,7 @@ class: center
   border-right-color: #D3D3D3;
 }
 
-#llcmthohci .gt_title {
+#mswpaqdaer .gt_title {
   color: #333333;
   font-size: 125%;
   font-weight: initial;
@@ -564,7 +572,7 @@ class: center
   border-bottom-width: 0;
 }
 
-#llcmthohci .gt_subtitle {
+#mswpaqdaer .gt_subtitle {
   color: #333333;
   font-size: 85%;
   font-weight: initial;
@@ -574,13 +582,13 @@ class: center
   border-top-width: 0;
 }
 
-#llcmthohci .gt_bottom_border {
+#mswpaqdaer .gt_bottom_border {
   border-bottom-style: solid;
   border-bottom-width: 2px;
   border-bottom-color: #D3D3D3;
 }
 
-#llcmthohci .gt_col_headings {
+#mswpaqdaer .gt_col_headings {
   border-top-style: solid;
   border-top-width: 2px;
   border-top-color: #D3D3D3;
@@ -595,7 +603,7 @@ class: center
   border-right-color: #D3D3D3;
 }
 
-#llcmthohci .gt_col_heading {
+#mswpaqdaer .gt_col_heading {
   color: #333333;
   background-color: #FFFFFF;
   font-size: 100%;
@@ -615,7 +623,7 @@ class: center
   overflow-x: hidden;
 }
 
-#llcmthohci .gt_column_spanner_outer {
+#mswpaqdaer .gt_column_spanner_outer {
   color: #333333;
   background-color: #FFFFFF;
   font-size: 100%;
@@ -627,15 +635,15 @@ class: center
   padding-right: 4px;
 }
 
-#llcmthohci .gt_column_spanner_outer:first-child {
+#mswpaqdaer .gt_column_spanner_outer:first-child {
   padding-left: 0;
 }
 
-#llcmthohci .gt_column_spanner_outer:last-child {
+#mswpaqdaer .gt_column_spanner_outer:last-child {
   padding-right: 0;
 }
 
-#llcmthohci .gt_column_spanner {
+#mswpaqdaer .gt_column_spanner {
   border-bottom-style: solid;
   border-bottom-width: 2px;
   border-bottom-color: #D3D3D3;
@@ -647,7 +655,7 @@ class: center
   width: 100%;
 }
 
-#llcmthohci .gt_group_heading {
+#mswpaqdaer .gt_group_heading {
   padding: 8px;
   color: #333333;
   background-color: #FFFFFF;
@@ -669,7 +677,7 @@ class: center
   vertical-align: middle;
 }
 
-#llcmthohci .gt_empty_group_heading {
+#mswpaqdaer .gt_empty_group_heading {
   padding: 0.5px;
   color: #333333;
   background-color: #FFFFFF;
@@ -684,15 +692,15 @@ class: center
   vertical-align: middle;
 }
 
-#llcmthohci .gt_from_md > :first-child {
+#mswpaqdaer .gt_from_md > :first-child {
   margin-top: 0;
 }
 
-#llcmthohci .gt_from_md > :last-child {
+#mswpaqdaer .gt_from_md > :last-child {
   margin-bottom: 0;
 }
 
-#llcmthohci .gt_row {
+#mswpaqdaer .gt_row {
   padding-top: 8px;
   padding-bottom: 8px;
   padding-left: 5px;
@@ -711,7 +719,7 @@ class: center
   overflow-x: hidden;
 }
 
-#llcmthohci .gt_stub {
+#mswpaqdaer .gt_stub {
   color: #333333;
   background-color: #FFFFFF;
   font-size: 100%;
@@ -723,7 +731,7 @@ class: center
   padding-left: 12px;
 }
 
-#llcmthohci .gt_summary_row {
+#mswpaqdaer .gt_summary_row {
   color: #333333;
   background-color: #FFFFFF;
   text-transform: inherit;
@@ -733,7 +741,7 @@ class: center
   padding-right: 5px;
 }
 
-#llcmthohci .gt_first_summary_row {
+#mswpaqdaer .gt_first_summary_row {
   padding-top: 8px;
   padding-bottom: 8px;
   padding-left: 5px;
@@ -743,7 +751,7 @@ class: center
   border-top-color: #D3D3D3;
 }
 
-#llcmthohci .gt_grand_summary_row {
+#mswpaqdaer .gt_grand_summary_row {
   color: #333333;
   background-color: #FFFFFF;
   text-transform: inherit;
@@ -753,7 +761,7 @@ class: center
   padding-right: 5px;
 }
 
-#llcmthohci .gt_first_grand_summary_row {
+#mswpaqdaer .gt_first_grand_summary_row {
   padding-top: 8px;
   padding-bottom: 8px;
   padding-left: 5px;
@@ -763,11 +771,11 @@ class: center
   border-top-color: #D3D3D3;
 }
 
-#llcmthohci .gt_striped {
+#mswpaqdaer .gt_striped {
   background-color: rgba(128, 128, 128, 0.05);
 }
 
-#llcmthohci .gt_table_body {
+#mswpaqdaer .gt_table_body {
   border-top-style: solid;
   border-top-width: 2px;
   border-top-color: #D3D3D3;
@@ -776,7 +784,7 @@ class: center
   border-bottom-color: #D3D3D3;
 }
 
-#llcmthohci .gt_footnotes {
+#mswpaqdaer .gt_footnotes {
   color: #333333;
   background-color: #FFFFFF;
   border-bottom-style: none;
@@ -790,13 +798,13 @@ class: center
   border-right-color: #D3D3D3;
 }
 
-#llcmthohci .gt_footnote {
+#mswpaqdaer .gt_footnote {
   margin: 0px;
   font-size: 90%;
   padding: 4px;
 }
 
-#llcmthohci .gt_sourcenotes {
+#mswpaqdaer .gt_sourcenotes {
   color: #333333;
   background-color: #FFFFFF;
   border-bottom-style: none;
@@ -810,41 +818,41 @@ class: center
   border-right-color: #D3D3D3;
 }
 
-#llcmthohci .gt_sourcenote {
+#mswpaqdaer .gt_sourcenote {
   font-size: 90%;
   padding: 4px;
 }
 
-#llcmthohci .gt_left {
+#mswpaqdaer .gt_left {
   text-align: left;
 }
 
-#llcmthohci .gt_center {
+#mswpaqdaer .gt_center {
   text-align: center;
 }
 
-#llcmthohci .gt_right {
+#mswpaqdaer .gt_right {
   text-align: right;
   font-variant-numeric: tabular-nums;
 }
 
-#llcmthohci .gt_font_normal {
+#mswpaqdaer .gt_font_normal {
   font-weight: normal;
 }
 
-#llcmthohci .gt_font_bold {
+#mswpaqdaer .gt_font_bold {
   font-weight: bold;
 }
 
-#llcmthohci .gt_font_italic {
+#mswpaqdaer .gt_font_italic {
   font-style: italic;
 }
 
-#llcmthohci .gt_super {
+#mswpaqdaer .gt_super {
   font-size: 65%;
 }
 
-#llcmthohci .gt_footnote_marks {
+#mswpaqdaer .gt_footnote_marks {
   font-style: italic;
   font-weight: normal;
   font-size: 65%;
