--- a/reports/slides_apr.html
+++ b/reports/slides_apr.html
@@ -86,7 +86,396 @@ class: center
 
 # Variáveis Explicativas Brasil
 
+<div id="vsnibidsac" style="overflow-x:auto;overflow-y:auto;width:auto;height:auto;">
+<style>html {
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Helvetica Neue', 'Fira Sans', 'Droid Sans', Arial, sans-serif;
+}
 
+#vsnibidsac .gt_table {
+  display: table;
+  border-collapse: collapse;
+  margin-left: auto;
+  margin-right: auto;
+  color: #333333;
+  font-size: 16px;
+  font-weight: normal;
+  font-style: normal;
+  background-color: #FFFFFF;
+  width: auto;
+  border-top-style: solid;
+  border-top-width: 2px;
+  border-top-color: #A8A8A8;
+  border-right-style: none;
+  border-right-width: 2px;
+  border-right-color: #D3D3D3;
+  border-bottom-style: solid;
+  border-bottom-width: 2px;
+  border-bottom-color: #A8A8A8;
+  border-left-style: none;
+  border-left-width: 2px;
+  border-left-color: #D3D3D3;
+}
+
+#vsnibidsac .gt_heading {
+  background-color: #FFFFFF;
+  text-align: center;
+  border-bottom-color: #FFFFFF;
+  border-left-style: none;
+  border-left-width: 1px;
+  border-left-color: #D3D3D3;
+  border-right-style: none;
+  border-right-width: 1px;
+  border-right-color: #D3D3D3;
+}
+
+#vsnibidsac .gt_title {
+  color: #333333;
+  font-size: 125%;
+  font-weight: initial;
+  padding-top: 4px;
+  padding-bottom: 4px;
+  border-bottom-color: #FFFFFF;
+  border-bottom-width: 0;
+}
+
+#vsnibidsac .gt_subtitle {
+  color: #333333;
+  font-size: 85%;
+  font-weight: initial;
+  padding-top: 0;
+  padding-bottom: 6px;
+  border-top-color: #FFFFFF;
+  border-top-width: 0;
+}
+
+#vsnibidsac .gt_bottom_border {
+  border-bottom-style: solid;
+  border-bottom-width: 2px;
+  border-bottom-color: #D3D3D3;
+}
+
+#vsnibidsac .gt_col_headings {
+  border-top-style: solid;
+  border-top-width: 2px;
+  border-top-color: #D3D3D3;
+  border-bottom-style: solid;
+  border-bottom-width: 2px;
+  border-bottom-color: #D3D3D3;
+  border-left-style: none;
+  border-left-width: 1px;
+  border-left-color: #D3D3D3;
+  border-right-style: none;
+  border-right-width: 1px;
+  border-right-color: #D3D3D3;
+}
+
+#vsnibidsac .gt_col_heading {
+  color: #333333;
+  background-color: #FFFFFF;
+  font-size: 100%;
+  font-weight: normal;
+  text-transform: inherit;
+  border-left-style: none;
+  border-left-width: 1px;
+  border-left-color: #D3D3D3;
+  border-right-style: none;
+  border-right-width: 1px;
+  border-right-color: #D3D3D3;
+  vertical-align: bottom;
+  padding-top: 5px;
+  padding-bottom: 6px;
+  padding-left: 5px;
+  padding-right: 5px;
+  overflow-x: hidden;
+}
+
+#vsnibidsac .gt_column_spanner_outer {
+  color: #333333;
+  background-color: #FFFFFF;
+  font-size: 100%;
+  font-weight: normal;
+  text-transform: inherit;
+  padding-top: 0;
+  padding-bottom: 0;
+  padding-left: 4px;
+  padding-right: 4px;
+}
+
+#vsnibidsac .gt_column_spanner_outer:first-child {
+  padding-left: 0;
+}
+
+#vsnibidsac .gt_column_spanner_outer:last-child {
+  padding-right: 0;
+}
+
+#vsnibidsac .gt_column_spanner {
+  border-bottom-style: solid;
+  border-bottom-width: 2px;
+  border-bottom-color: #D3D3D3;
+  vertical-align: bottom;
+  padding-top: 5px;
+  padding-bottom: 5px;
+  overflow-x: hidden;
+  display: inline-block;
+  width: 100%;
+}
+
+#vsnibidsac .gt_group_heading {
+  padding: 8px;
+  color: #333333;
+  background-color: #FFFFFF;
+  font-size: 100%;
+  font-weight: initial;
+  text-transform: inherit;
+  border-top-style: solid;
+  border-top-width: 2px;
+  border-top-color: #D3D3D3;
+  border-bottom-style: solid;
+  border-bottom-width: 2px;
+  border-bottom-color: #D3D3D3;
+  border-left-style: none;
+  border-left-width: 1px;
+  border-left-color: #D3D3D3;
+  border-right-style: none;
+  border-right-width: 1px;
+  border-right-color: #D3D3D3;
+  vertical-align: middle;
+}
+
+#vsnibidsac .gt_empty_group_heading {
+  padding: 0.5px;
+  color: #333333;
+  background-color: #FFFFFF;
+  font-size: 100%;
+  font-weight: initial;
+  border-top-style: solid;
+  border-top-width: 2px;
+  border-top-color: #D3D3D3;
+  border-bottom-style: solid;
+  border-bottom-width: 2px;
+  border-bottom-color: #D3D3D3;
+  vertical-align: middle;
+}
+
+#vsnibidsac .gt_from_md > :first-child {
+  margin-top: 0;
+}
+
+#vsnibidsac .gt_from_md > :last-child {
+  margin-bottom: 0;
+}
+
+#vsnibidsac .gt_row {
+  padding-top: 8px;
+  padding-bottom: 8px;
+  padding-left: 5px;
+  padding-right: 5px;
+  margin: 10px;
+  border-top-style: solid;
+  border-top-width: 1px;
+  border-top-color: #D3D3D3;
+  border-left-style: none;
+  border-left-width: 1px;
+  border-left-color: #D3D3D3;
+  border-right-style: none;
+  border-right-width: 1px;
+  border-right-color: #D3D3D3;
+  vertical-align: middle;
+  overflow-x: hidden;
+}
+
+#vsnibidsac .gt_stub {
+  color: #333333;
+  background-color: #FFFFFF;
+  font-size: 100%;
+  font-weight: initial;
+  text-transform: inherit;
+  border-right-style: solid;
+  border-right-width: 2px;
+  border-right-color: #D3D3D3;
+  padding-left: 12px;
+}
+
+#vsnibidsac .gt_summary_row {
+  color: #333333;
+  background-color: #FFFFFF;
+  text-transform: inherit;
+  padding-top: 8px;
+  padding-bottom: 8px;
+  padding-left: 5px;
+  padding-right: 5px;
+}
+
+#vsnibidsac .gt_first_summary_row {
+  padding-top: 8px;
+  padding-bottom: 8px;
+  padding-left: 5px;
+  padding-right: 5px;
+  border-top-style: solid;
+  border-top-width: 2px;
+  border-top-color: #D3D3D3;
+}
+
+#vsnibidsac .gt_grand_summary_row {
+  color: #333333;
+  background-color: #FFFFFF;
+  text-transform: inherit;
+  padding-top: 8px;
+  padding-bottom: 8px;
+  padding-left: 5px;
+  padding-right: 5px;
+}
+
+#vsnibidsac .gt_first_grand_summary_row {
+  padding-top: 8px;
+  padding-bottom: 8px;
+  padding-left: 5px;
+  padding-right: 5px;
+  border-top-style: double;
+  border-top-width: 6px;
+  border-top-color: #D3D3D3;
+}
+
+#vsnibidsac .gt_striped {
+  background-color: rgba(128, 128, 128, 0.05);
+}
+
+#vsnibidsac .gt_table_body {
+  border-top-style: solid;
+  border-top-width: 2px;
+  border-top-color: #D3D3D3;
+  border-bottom-style: solid;
+  border-bottom-width: 2px;
+  border-bottom-color: #D3D3D3;
+}
+
+#vsnibidsac .gt_footnotes {
+  color: #333333;
+  background-color: #FFFFFF;
+  border-bottom-style: none;
+  border-bottom-width: 2px;
+  border-bottom-color: #D3D3D3;
+  border-left-style: none;
+  border-left-width: 2px;
+  border-left-color: #D3D3D3;
+  border-right-style: none;
+  border-right-width: 2px;
+  border-right-color: #D3D3D3;
+}
+
+#vsnibidsac .gt_footnote {
+  margin: 0px;
+  font-size: 90%;
+  padding: 4px;
+}
+
+#vsnibidsac .gt_sourcenotes {
+  color: #333333;
+  background-color: #FFFFFF;
+  border-bottom-style: none;
+  border-bottom-width: 2px;
+  border-bottom-color: #D3D3D3;
+  border-left-style: none;
+  border-left-width: 2px;
+  border-left-color: #D3D3D3;
+  border-right-style: none;
+  border-right-width: 2px;
+  border-right-color: #D3D3D3;
+}
+
+#vsnibidsac .gt_sourcenote {
+  font-size: 90%;
+  padding: 4px;
+}
+
+#vsnibidsac .gt_left {
+  text-align: left;
+}
+
+#vsnibidsac .gt_center {
+  text-align: center;
+}
+
+#vsnibidsac .gt_right {
+  text-align: right;
+  font-variant-numeric: tabular-nums;
+}
+
+#vsnibidsac .gt_font_normal {
+  font-weight: normal;
+}
+
+#vsnibidsac .gt_font_bold {
+  font-weight: bold;
+}
+
+#vsnibidsac .gt_font_italic {
+  font-style: italic;
+}
+
+#vsnibidsac .gt_super {
+  font-size: 65%;
+}
+
+#vsnibidsac .gt_footnote_marks {
+  font-style: italic;
+  font-weight: normal;
+  font-size: 65%;
+}
+</style>
+<table class="gt_table">
+  <thead class="gt_header">
+    <tr>
+      <th colspan="5" class="gt_heading gt_title gt_font_normal gt_bottom_border" style>Variáveis do Modelo</th>
+    </tr>
+    
+  </thead>
+  <thead class="gt_col_headings">
+    <tr>
+      <th class="gt_col_heading gt_columns_bottom_border gt_left" rowspan="1" colspan="1">Serie</th>
+      <th class="gt_col_heading gt_columns_bottom_border gt_left" rowspan="1" colspan="1">Ap.</th>
+      <th class="gt_col_heading gt_columns_bottom_border gt_left" rowspan="1" colspan="1">Inicio</th>
+      <th class="gt_col_heading gt_columns_bottom_border gt_right" rowspan="1" colspan="1">Obs.</th>
+      <th class="gt_col_heading gt_columns_bottom_border gt_left" rowspan="1" colspan="1">Fonte</th>
+    </tr>
+  </thead>
+  <tbody class="gt_table_body">
+    <tr><td class="gt_row gt_left">Taxa referencial entre Swap e PrÃ© Fixada de 360 dias</td>
+<td class="gt_row gt_left">swap</td>
+<td class="gt_row gt_left">1999-09-01</td>
+<td class="gt_row gt_right">263</td>
+<td class="gt_row gt_left">IPEA</td></tr>
+    <tr><td class="gt_row gt_left">Ãndice de aÃ§Ãµes: Ibovespa - fechamento</td>
+<td class="gt_row gt_left">ibov</td>
+<td class="gt_row gt_left">1968-02-01</td>
+<td class="gt_row gt_right">642</td>
+<td class="gt_row gt_left">IPEA</td></tr>
+    <tr><td class="gt_row gt_left">PreÃ§os - Ãndice FipeZap ImÃ³veis Anunciados vendas no Brasil</td>
+<td class="gt_row gt_left">fipezap</td>
+<td class="gt_row gt_left">2008-01-01</td>
+<td class="gt_row gt_right">163</td>
+<td class="gt_row gt_left">IPEA</td></tr>
+    <tr><td class="gt_row gt_left">Ãndice de Liquidez do Sistema BancÃ¡rio Nacional</td>
+<td class="gt_row gt_left">il</td>
+<td class="gt_row gt_left">2012-01-01</td>
+<td class="gt_row gt_right">114</td>
+<td class="gt_row gt_left">SGS BACEN</td></tr>
+    <tr><td class="gt_row gt_left">Ãndice Composto de DeterioraÃ§Ã£o Macroeconomica</td>
+<td class="gt_row gt_left">tcb</td>
+<td class="gt_row gt_left">2010-02-01</td>
+<td class="gt_row gt_right">136</td>
+<td class="gt_row gt_left">FormulaÃ§Ã£o PrÃ³pria</td></tr>
+    <tr><td class="gt_row gt_left">DataÃ§Ã£o de RecessÃµes (Harding &amp; Pagan</td>
+<td class="gt_row gt_left">dummy</td>
+<td class="gt_row gt_left">1996-01-01</td>
+<td class="gt_row gt_right">303</td>
+<td class="gt_row gt_left">CODACE</td></tr>
+  </tbody>
+  
+  
+</table>
+</div>
 
 ---
 # Datação de Recessões
@@ -123,12 +512,12 @@ class: center
 ## 5 2019Q4  2020Q2        2
 ```
 
-<div id="pgiiqbjctv" style="overflow-x:auto;overflow-y:auto;width:auto;height:auto;">
+<div id="jplaaovghu" style="overflow-x:auto;overflow-y:auto;width:auto;height:auto;">
 <style>html {
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Helvetica Neue', 'Fira Sans', 'Droid Sans', Arial, sans-serif;
 }
 
-#pgiiqbjctv .gt_table {
+#jplaaovghu .gt_table {
   display: table;
   border-collapse: collapse;
   margin-left: auto;
@@ -153,7 +542,7 @@ class: center
   border-left-color: #D3D3D3;
 }
 
-#pgiiqbjctv .gt_heading {
+#jplaaovghu .gt_heading {
   background-color: #FFFFFF;
   text-align: center;
   border-bottom-color: #FFFFFF;
@@ -165,7 +554,7 @@ class: center
   border-right-color: #D3D3D3;
 }
 
-#pgiiqbjctv .gt_title {
+#jplaaovghu .gt_title {
   color: #333333;
   font-size: 125%;
   font-weight: initial;
@@ -175,7 +564,7 @@ class: center
   border-bottom-width: 0;
 }
 
-#pgiiqbjctv .gt_subtitle {
+#jplaaovghu .gt_subtitle {
   color: #333333;
   font-size: 85%;
   font-weight: initial;
@@ -185,13 +574,13 @@ class: center
   border-top-width: 0;
 }
 
-#pgiiqbjctv .gt_bottom_border {
+#jplaaovghu .gt_bottom_border {
   border-bottom-style: solid;
   border-bottom-width: 2px;
   border-bottom-color: #D3D3D3;
 }
 
-#pgiiqbjctv .gt_col_headings {
+#jplaaovghu .gt_col_headings {
   border-top-style: solid;
   border-top-width: 2px;
   border-top-color: #D3D3D3;
@@ -206,7 +595,7 @@ class: center
   border-right-color: #D3D3D3;
 }
 
-#pgiiqbjctv .gt_col_heading {
+#jplaaovghu .gt_col_heading {
   color: #333333;
   background-color: #FFFFFF;
   font-size: 100%;
@@ -226,7 +615,7 @@ class: center
   overflow-x: hidden;
 }
 
-#pgiiqbjctv .gt_column_spanner_outer {
+#jplaaovghu .gt_column_spanner_outer {
   color: #333333;
   background-color: #FFFFFF;
   font-size: 100%;
@@ -238,15 +627,15 @@ class: center
   padding-right: 4px;
 }
 
-#pgiiqbjctv .gt_column_spanner_outer:first-child {
+#jplaaovghu .gt_column_spanner_outer:first-child {
   padding-left: 0;
 }
 
-#pgiiqbjctv .gt_column_spanner_outer:last-child {
+#jplaaovghu .gt_column_spanner_outer:last-child {
   padding-right: 0;
 }
 
-#pgiiqbjctv .gt_column_spanner {
+#jplaaovghu .gt_column_spanner {
   border-bottom-style: solid;
   border-bottom-width: 2px;
   border-bottom-color: #D3D3D3;
@@ -258,7 +647,7 @@ class: center
   width: 100%;
 }
 
-#pgiiqbjctv .gt_group_heading {
+#jplaaovghu .gt_group_heading {
   padding: 8px;
   color: #333333;
   background-color: #FFFFFF;
@@ -280,7 +669,7 @@ class: center
   vertical-align: middle;
 }
 
-#pgiiqbjctv .gt_empty_group_heading {
+#jplaaovghu .gt_empty_group_heading {
   padding: 0.5px;
   color: #333333;
   background-color: #FFFFFF;
@@ -295,15 +684,15 @@ class: center
   vertical-align: middle;
 }
 
-#pgiiqbjctv .gt_from_md > :first-child {
+#jplaaovghu .gt_from_md > :first-child {
   margin-top: 0;
 }
 
-#pgiiqbjctv .gt_from_md > :last-child {
+#jplaaovghu .gt_from_md > :last-child {
   margin-bottom: 0;
 }
 
-#pgiiqbjctv .gt_row {
+#jplaaovghu .gt_row {
   padding-top: 8px;
   padding-bottom: 8px;
   padding-left: 5px;
@@ -322,7 +711,7 @@ class: center
   overflow-x: hidden;
 }
 
-#pgiiqbjctv .gt_stub {
+#jplaaovghu .gt_stub {
   color: #333333;
   background-color: #FFFFFF;
   font-size: 100%;
@@ -334,7 +723,7 @@ class: center
   padding-left: 12px;
 }
 
-#pgiiqbjctv .gt_summary_row {
+#jplaaovghu .gt_summary_row {
   color: #333333;
   background-color: #FFFFFF;
   text-transform: inherit;
@@ -344,7 +733,7 @@ class: center
   padding-right: 5px;
 }
 
-#pgiiqbjctv .gt_first_summary_row {
+#jplaaovghu .gt_first_summary_row {
   padding-top: 8px;
   padding-bottom: 8px;
   padding-left: 5px;
@@ -354,7 +743,7 @@ class: center
   border-top-color: #D3D3D3;
 }
 
-#pgiiqbjctv .gt_grand_summary_row {
+#jplaaovghu .gt_grand_summary_row {
   color: #333333;
   background-color: #FFFFFF;
   text-transform: inherit;
@@ -364,7 +753,7 @@ class: center
   padding-right: 5px;
 }
 
-#pgiiqbjctv .gt_first_grand_summary_row {
+#jplaaovghu .gt_first_grand_summary_row {
   padding-top: 8px;
   padding-bottom: 8px;
   padding-left: 5px;
@@ -374,11 +763,11 @@ class: center
   border-top-color: #D3D3D3;
 }
 
-#pgiiqbjctv .gt_striped {
+#jplaaovghu .gt_striped {
   background-color: rgba(128, 128, 128, 0.05);
 }
 
-#pgiiqbjctv .gt_table_body {
+#jplaaovghu .gt_table_body {
   border-top-style: solid;
   border-top-width: 2px;
   border-top-color: #D3D3D3;
@@ -387,7 +776,7 @@ class: center
   border-bottom-color: #D3D3D3;
 }
 
-#pgiiqbjctv .gt_footnotes {
+#jplaaovghu .gt_footnotes {
   color: #333333;
   background-color: #FFFFFF;
   border-bottom-style: none;
@@ -401,13 +790,13 @@ class: center
   border-right-color: #D3D3D3;
 }
 
-#pgiiqbjctv .gt_footnote {
+#jplaaovghu .gt_footnote {
   margin: 0px;
   font-size: 90%;
   padding: 4px;
 }
 
-#pgiiqbjctv .gt_sourcenotes {
+#jplaaovghu .gt_sourcenotes {
   color: #333333;
   background-color: #FFFFFF;
   border-bottom-style: none;
@@ -421,41 +810,41 @@ class: center
   border-right-color: #D3D3D3;
 }
 
-#pgiiqbjctv .gt_sourcenote {
+#jplaaovghu .gt_sourcenote {
   font-size: 90%;
   padding: 4px;
 }
 
-#pgiiqbjctv .gt_left {
+#jplaaovghu .gt_left {
   text-align: left;
 }
 
-#pgiiqbjctv .gt_center {
+#jplaaovghu .gt_center {
   text-align: center;
 }
 
-#pgiiqbjctv .gt_right {
+#jplaaovghu .gt_right {
   text-align: right;
   font-variant-numeric: tabular-nums;
 }
 
-#pgiiqbjctv .gt_font_normal {
+#jplaaovghu .gt_font_normal {
   font-weight: normal;
 }
 
-#pgiiqbjctv .gt_font_bold {
+#jplaaovghu .gt_font_bold {
   font-weight: bold;
 }
 
-#pgiiqbjctv .gt_font_italic {
+#jplaaovghu .gt_font_italic {
   font-style: italic;
 }
 
-#pgiiqbjctv .gt_super {
+#jplaaovghu .gt_super {
   font-size: 65%;
 }
 
-#pgiiqbjctv .gt_footnote_marks {
+#jplaaovghu .gt_footnote_marks {
   font-style: italic;
   font-weight: normal;
   font-size: 65%;
